--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -6,6 +6,14 @@ msgctxt "error:commission.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
+msgctxt "field:account.invoice,com_invoices:"
+msgid "Commission Invoices"
+msgstr "Relevés de commissions"
+
+msgctxt "field:account.invoice,contract_invoice:"
+msgid "Contract Invoice"
+msgstr "Quittance"
+
 msgctxt "field:account.move,com_amount:"
 msgid "Com amount"
 msgstr "Montant de Commissions"
@@ -17,18 +25,6 @@ msgstr "Commissions"
 msgctxt "field:account.move,wo_com_amount:"
 msgid "Amount w/o com"
 msgstr "Montant hors Commissions"
-
-msgctxt "field:account.move,wo_tax_amount:"
-msgid "Total Amount w/o taxes"
-msgstr "Montant total hors Taxes"
-
-msgctxt "field:account.move.breakdown,base_total:"
-msgid "Base Total"
-msgstr "Base"
-
-msgctxt "field:account.move.breakdown,commissions:"
-msgid "Commissions"
-msgstr "Commissions"
 
 msgctxt "field:broker,create_date:"
 msgid "Create Date"
@@ -194,67 +190,51 @@ msgctxt "field:commission.rule,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:contract.billing.premium,com_lines:"
-msgid "Commission lines"
-msgstr "Lignes de Commissions"
+msgctxt "field:contract.invoice,commissions:"
+msgid "Commissions"
+msgstr "Commissions"
 
-msgctxt "field:contract.billing.premium,estimated_com:"
-msgid "Estimated Commissions"
-msgstr "Commissions estimées"
+msgctxt "field:contract.invoice.commission,com_invoice:"
+msgid "Commission Invoice"
+msgstr "Relevé de commissions"
 
-msgctxt "field:contract.billing.premium,estimated_wo_com:"
-msgid "Estimated w/o coms"
-msgstr "Montant estimé hors Commissions"
+msgctxt "field:contract.invoice.commission,contract_invoice:"
+msgid "Contract Invoice"
+msgstr "Quittance"
 
-msgctxt "field:contract.billing.premium-commission.option,amount:"
-msgid "Amount"
-msgstr "Montant"
-
-msgctxt "field:contract.billing.premium-commission.option,com_option:"
-msgid "Commission Subscribed"
-msgstr "Garantie commissionée"
-
-msgctxt "field:contract.billing.premium-commission.option,create_date:"
+msgctxt "field:contract.invoice.commission,create_date:"
 msgid "Create Date"
-msgstr "Date de création"
+msgstr "Date de Création"
 
-msgctxt "field:contract.billing.premium-commission.option,create_date_:"
+msgctxt "field:contract.invoice.commission,create_date_:"
 msgid "Creation date"
-msgstr "Creation date"
+msgstr "Date de Création"
 
-msgctxt "field:contract.billing.premium-commission.option,create_uid:"
+msgctxt "field:contract.invoice.commission,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:contract.billing.premium-commission.option,id:"
+msgctxt "field:contract.invoice.commission,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.billing.premium-commission.option,must_expand_tree:"
+msgctxt "field:contract.invoice.commission,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:contract.billing.premium-commission.option,price_line:"
-msgid "Price Line"
-msgstr "Ligne de Prime"
-
-msgctxt "field:contract.billing.premium-commission.option,rec_name:"
+msgctxt "field:contract.invoice.commission,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:contract.billing.premium-commission.option,to_recalculate:"
-msgid "Recalculate at billing"
-msgstr "Recalculer à la facturation"
-
-msgctxt "field:contract.billing.premium-commission.option,write_date:"
+msgctxt "field:contract.invoice.commission,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:contract.billing.premium-commission.option,write_uid:"
+msgctxt "field:contract.invoice.commission,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:contract.billing.premium-commission.option,xml_id:"
+msgctxt "field:contract.invoice.commission,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -339,6 +319,62 @@ msgid "Write User"
 msgstr "Mis à jour par"
 
 msgctxt "field:contract.option-commission.option,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:contract.premium,commissions:"
+msgid "Commissions"
+msgstr "Commissions"
+
+msgctxt "field:contract.premium.commission,com_option:"
+msgid "Commission Coverage"
+msgstr "Garantie de commissionnement"
+
+msgctxt "field:contract.premium.commission,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:contract.premium.commission,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:contract.premium.commission,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract.premium.commission,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract.premium.commission,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:contract.premium.commission,party:"
+msgid "Party"
+msgstr "Tiers"
+
+msgctxt "field:contract.premium.commission,premium:"
+msgid "Premium"
+msgstr "Prime"
+
+msgctxt "field:contract.premium.commission,rate:"
+msgid "Commission Rate"
+msgstr "Taux de commissionnement"
+
+msgctxt "field:contract.premium.commission,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract.premium.commission,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract.premium.commission,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:contract.premium.commission,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -458,10 +494,6 @@ msgctxt "field:offered.option.description,coverages:"
 msgid "Coverages"
 msgstr "Garanties"
 
-msgctxt "field:offered.option.description,is_loan:"
-msgid "Is Loan"
-msgstr "Emprunteur"
-
 msgctxt "field:offered.product,commission_kind:"
 msgid "Commission Kind"
 msgstr "Type de commission"
@@ -469,10 +501,6 @@ msgstr "Type de commission"
 msgctxt "field:offered.product,dist_networks:"
 msgid "Distribution Networks"
 msgstr "Réseaux de Distribution"
-
-msgctxt "field:offered.product,is_loan:"
-msgid "Is Loan"
-msgstr "Emprunteur"
 
 msgctxt "field:party.party,broker_role:"
 msgid "Broker"
@@ -494,13 +522,17 @@ msgctxt "model:commission.rule,name:"
 msgid "Commission Rule"
 msgstr "Règle de Commissionnement"
 
-msgctxt "model:contract.billing.premium-commission.option,name:"
-msgid "Billing Premium-Commission Option Relation"
-msgstr "Relation Ligne de Prime - Commission"
+msgctxt "model:contract.invoice.commission,name:"
+msgid "Commission Invoice"
+msgstr "Relevé de commissions"
 
 msgctxt "model:contract.option-commission.option,name:"
 msgid "Option-Commission Option Relation"
 msgstr "Option Commissionnée"
+
+msgctxt "model:contract.premium.commission,name:"
+msgid "Premium Commission"
+msgstr "Commissions"
 
 msgctxt "model:distribution.network-broker,name:"
 msgid "Relation Distribution Network - Broker"
@@ -626,37 +658,17 @@ msgctxt "selection:offered.product,kind:"
 msgid "Commission"
 msgstr "Commission"
 
-msgctxt "view:account.move.breakdown:"
-msgid "Base Amount"
-msgstr "Base"
+msgctxt "view:account.invoice:"
+msgid "Commission Invoices"
+msgstr "Relevés de commissions"
 
-msgctxt "view:account.move.breakdown:"
-msgid "Breakdown"
-msgstr "Ventilation"
-
-msgctxt "view:account.move.breakdown:"
+msgctxt "view:account.invoice:"
 msgid "Commissions"
 msgstr "Commissions"
 
-msgctxt "view:account.move.breakdown:"
-msgid "Fees"
-msgstr "Frais"
-
-msgctxt "view:account.move.breakdown:"
-msgid "Taxes"
-msgstr "Taxes"
-
-msgctxt "view:account.move.breakdown:"
-msgid "Total"
-msgstr "Total"
-
-msgctxt "view:account.move.breakdown:"
-msgid "Total w/o Fees"
-msgstr "Total Sans Frais"
-
-msgctxt "view:account.move.breakdown:"
-msgid "Total w/o taxes"
-msgstr "Total Sans Taxes"
+msgctxt "view:account.invoice:"
+msgid "Total Amount"
+msgstr "Montant total"
 
 msgctxt "view:account.move:"
 msgid "Commissions"
@@ -678,14 +690,6 @@ msgctxt "view:commission.rule:"
 msgid "Commission rule"
 msgstr "Règle de Commissionnement"
 
-msgctxt "view:contract.billing.premium-commission.option:"
-msgid "Com Line"
-msgstr "Ligne de Commission"
-
-msgctxt "view:contract.billing.premium-commission.option:"
-msgid "Com Lines"
-msgstr "Lignes de Commission"
-
 msgctxt "view:contract.option-commission.option:"
 msgid "%"
 msgstr "%"
@@ -705,6 +709,14 @@ msgstr "Garanties"
 msgctxt "view:contract.option:"
 msgid "Option-Commission Option Relation"
 msgstr "Relation Option - Option de Com"
+
+msgctxt "view:contract.premium.commission:"
+msgid "%"
+msgstr "%"
+
+msgctxt "view:contract.premium.commission:"
+msgid "Commissions"
+msgstr "Commissions"
 
 msgctxt "view:distribution.network:"
 msgid "Commissioning"
