--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -37,10 +37,6 @@ msgctxt "field:contract,agreements:"
 msgid "Contract-Agreement Relations"
 msgstr "Géré par"
 
-msgctxt "field:contract,contact:"
-msgid "Contact"
-msgstr "Contact"
-
 msgctxt "field:contract,contract_number:"
 msgid "Contract Number"
 msgstr "Numéro de Contrat"
@@ -104,6 +100,10 @@ msgstr "Prochain renouvellement"
 msgctxt "field:contract,options:"
 msgid "Options"
 msgstr "Garanties"
+
+msgctxt "field:contract,possible_item_desc:"
+msgid "Possible Item Desc"
+msgstr "Description des risques possibles"
 
 msgctxt "field:contract,rec_name:"
 msgid "Name"
@@ -253,6 +253,10 @@ msgctxt "field:contract.address,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:contract.covered_element,all_extra_datas:"
+msgid "All Extra Datas"
+msgstr "Toutes les données complémentaires"
+
 msgctxt "field:contract.covered_element,contract:"
 msgid "Contract"
 msgstr "Contrat"
@@ -341,6 +345,10 @@ msgctxt "field:contract.covered_element,parent:"
 msgid "Parent"
 msgstr "Parent"
 
+msgctxt "field:contract.covered_element,parties:"
+msgid "Parties"
+msgstr "Tiers"
+
 msgctxt "field:contract.covered_element,party:"
 msgid "Actor"
 msgstr "Acteur"
@@ -349,9 +357,9 @@ msgctxt "field:contract.covered_element,party_extra_data:"
 msgid "Party Complementary Data"
 msgstr "Données Complémentaires"
 
-msgctxt "field:contract.covered_element,possible_item_desc:"
-msgid "Possible Item Desc"
-msgstr "Desc. de Biens Possibles"
+msgctxt "field:contract.covered_element,product:"
+msgid "Product"
+msgstr "Produit"
 
 msgctxt "field:contract.covered_element,rec_name:"
 msgid "Name"
@@ -541,6 +549,10 @@ msgctxt "field:contract.manage_extra_premium.select.option,selected:"
 msgid "Selected"
 msgstr "Coché"
 
+msgctxt "field:contract.option,all_extra_datas:"
+msgid "All Extra Datas"
+msgstr "Toutes les données complémentaires"
+
 msgctxt "field:contract.option,contract:"
 msgid "Contract"
 msgstr "Contrat"
@@ -589,13 +601,13 @@ msgctxt "field:contract.option,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:contract.option,parent_contract:"
+msgid "Parent Contract"
+msgstr "Contrat parent"
+
 msgctxt "field:contract.option,parent_option:"
 msgid "Parent Covered Data"
 msgstr "Parents"
-
-msgctxt "field:contract.option,possible_coverages:"
-msgid "Possible Coverages"
-msgstr "Garanties possibles"
 
 msgctxt "field:contract.option,rec_name:"
 msgid "Name"
@@ -1167,10 +1179,6 @@ msgstr "Exclusions"
 msgctxt "view:contract.option:"
 msgid "Extra Premium"
 msgstr "Surprime"
-
-msgctxt "view:contract.option:"
-msgid "Main Data"
-msgstr "Parent"
 
 msgctxt "view:contract.option:"
 msgid "Option"
