--- a/modules/health/locale/fr_FR.po
+++ b/modules/health/locale/fr_FR.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:contract,is_health:"
-msgid ""
-msgstr " "
+msgid "Is Health"
+msgstr "Santé"
 
 msgctxt "field:contract.covered_element,health_complement:"
 msgid "Health Complement"
@@ -15,8 +15,8 @@ msgid "Is Health"
 msgstr "Santé"
 
 msgctxt "field:contract.option,is_health:"
-msgid ""
-msgstr " "
+msgid "Is Health"
+msgstr "Santé"
 
 msgctxt "field:health.party_complement,create_date:"
 msgid "Create Date"
@@ -56,15 +56,15 @@ msgstr "Mis à jour par"
 
 msgctxt "field:health.party_complement,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
 msgctxt "field:offered.option.description,is_health:"
 msgid "Is Health"
 msgstr "Santé"
 
 msgctxt "field:offered.product,is_health:"
-msgid ""
-msgstr " "
+msgid "Is Health"
+msgstr "Santé"
 
 msgctxt "field:party.party,health_complement:"
 msgid "Health Complement"
