--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -22,6 +22,12 @@ msgctxt "error:offered.product:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
+msgctxt "error:offered.product:"
+msgid "The following contract extradata should be set on the product: %s"
+msgstr ""
+"La donnée complémentaire contrat suivante doit être définie sur le produit: "
+"%s"
+
 msgctxt "field:extra_data,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -354,6 +360,10 @@ msgctxt "field:offered.option.description,options_required:"
 msgid "Options Required"
 msgstr "Options Requises"
 
+msgctxt "field:offered.option.description,products:"
+msgid "OptionDescriptions"
+msgstr "Garanties"
+
 msgctxt "field:offered.option.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -551,8 +561,8 @@ msgid "XML Id"
 msgstr "Identifiant XML"
 
 msgctxt "field:offered.product,change_coverages_order:"
-msgid ""
-msgstr ""
+msgid "Change Order"
+msgstr "Modifier l'Ordre"
 
 msgctxt "field:offered.product,code:"
 msgid "Code"
@@ -790,6 +800,10 @@ msgctxt "model:ir.sequence.type,name:sequence_type_contract_number"
 msgid "Contract Number"
 msgstr "Numéro de Contrat"
 
+msgctxt "model:ir.ui.menu,name:menu_contract_configuration"
+msgid "Contract Configuration"
+msgstr "Configuration Contrat"
+
 msgctxt "model:ir.ui.menu,name:menu_coverage_form"
 msgid "OptionDescriptions"
 msgstr "Garanties"
@@ -865,6 +879,10 @@ msgstr "Risque Couvert"
 msgctxt "selection:extra_data,kind:"
 msgid "Loss"
 msgstr "Préjudice"
+
+msgctxt "selection:extra_data,kind:"
+msgid "Option"
+msgstr "Option"
 
 msgctxt "selection:extra_data,kind:"
 msgid "Product"
