--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -174,6 +174,10 @@ msgctxt "field:ir.sequence,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:ir.sequence.strict,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:ir.test_case,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
