--- a/modules/contract_insurance_process/locale/fr_FR.po
+++ b/modules/contract_insurance_process/locale/fr_FR.po
@@ -85,10 +85,6 @@ msgctxt "field:contract,subscriber_kind:"
 msgid "Subscriber Kind"
 msgstr "Type"
 
-msgctxt "field:contract.covered_data,status_selection:"
-msgid "Status"
-msgstr "Statut"
-
 msgctxt "field:contract.option,status_selection:"
 msgid "Status"
 msgstr "Statut"
@@ -98,7 +94,7 @@ msgid "Business Provider"
 msgstr "Apporteur d'affaires"
 
 msgctxt "field:contract.subscribe.find_process,com_product:"
-msgid "Product Commercial"
+msgid "Commercial Product"
 msgstr "Produit Commercial"
 
 msgctxt "field:contract.subscribe.find_process,date:"
@@ -165,10 +161,6 @@ msgctxt "selection:process,kind:"
 msgid "Contract Subscription"
 msgstr "Souscription Contrat"
 
-msgctxt "view:contract.covered_data:"
-msgid "Covered Data"
-msgstr "Données de Couverture"
-
 msgctxt "view:contract.option:"
 msgid "Options"
 msgstr "Garanties"
@@ -179,7 +171,7 @@ msgstr "Démarrer le processus"
 
 msgctxt "wizard_button:contract.subscribe,process_parameters,action:"
 msgid "Start Process (_k)"
-msgstr "Démarrer Processus (_k)"
+msgstr "Démarrer le processus (_k)"
 
 msgctxt "wizard_button:contract.subscribe,process_parameters,end:"
 msgid "Cancel"
