--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -11,10 +11,6 @@ msgid "%s : Rule combination unavailable with tax (%s) version (%s)"
 msgstr ""
 
 msgctxt "error:billing.premium.rule:"
-msgid "You can not have 2 business rules that overlaps!"
-msgstr "2 règles se chevauchent!"
-
-msgctxt "error:clause.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -83,6 +79,13 @@ msgctxt "error:offered.product:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
+msgctxt "error:offered.product:"
+msgid ""
+"The following covered element extra data should be set on the product: %s"
+msgstr ""
+"La donnée complémentaire risque couvert suivante doit être définie sur le "
+"produit: %s"
+
 msgctxt "error:offered.term.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
@@ -138,6 +141,10 @@ msgstr "Fréquence de calcul"
 msgctxt "field:billing.premium.rule,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:billing.premium.rule,match_contract_frequency:"
+msgid "Match Contract Frequency"
+msgstr "Synchroniser avec la fréquence du contrat"
 
 msgctxt "field:billing.premium.rule,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -295,10 +302,6 @@ msgctxt "field:clause,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:clause,current_rec_name:"
-msgid "Current Value"
-msgstr "Valeur Courante"
-
 msgctxt "field:clause,id:"
 msgid "ID"
 msgstr "ID"
@@ -319,14 +322,6 @@ msgctxt "field:clause,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:clause,title:"
-msgid "Title"
-msgstr "Titre"
-
-msgctxt "field:clause,versions:"
-msgid "Versions"
-msgstr "Versions"
-
 msgctxt "field:clause,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -336,174 +331,6 @@ msgid "Write User"
 msgstr "Mis à jour par"
 
 msgctxt "field:clause,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
-
-msgctxt "field:clause.rule,clauses:"
-msgid "Clauses"
-msgstr "Clauses"
-
-msgctxt "field:clause.rule,config_kind:"
-msgid "Conf. kind"
-msgstr "Type de Conf."
-
-msgctxt "field:clause.rule,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:clause.rule,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:clause.rule,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:clause.rule,end_date:"
-msgid "To Date"
-msgstr "Date de Fin"
-
-msgctxt "field:clause.rule,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:clause.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
-msgctxt "field:clause.rule,offered:"
-msgid "Offered"
-msgstr "Offre"
-
-msgctxt "field:clause.rule,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:clause.rule,rule:"
-msgid "Rule Engine"
-msgstr "Moteur de Règle"
-
-msgctxt "field:clause.rule,rule_extra_data:"
-msgid "Rule Extra Data"
-msgstr "Paramètres de Rêgle"
-
-msgctxt "field:clause.rule,start_date:"
-msgid "From Date"
-msgstr "Date de Début"
-
-msgctxt "field:clause.rule,template:"
-msgid "Template"
-msgstr "Modèle"
-
-msgctxt "field:clause.rule,template_behaviour:"
-msgid "Template Behaviour"
-msgstr "Comportement du Modèle"
-
-msgctxt "field:clause.rule,view_rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:clause.rule,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:clause.rule,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:clause.rule,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
-
-msgctxt "field:clause.rule-clause,clause:"
-msgid "Clause"
-msgstr "Clause"
-
-msgctxt "field:clause.rule-clause,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:clause.rule-clause,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:clause.rule-clause,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:clause.rule-clause,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:clause.rule-clause,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:clause.rule-clause,rule:"
-msgid "Rule"
-msgstr "Règle"
-
-msgctxt "field:clause.rule-clause,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:clause.rule-clause,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:clause.rule-clause,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
-
-msgctxt "field:clause.version,content:"
-msgid "Content"
-msgstr "Contenu"
-
-msgctxt "field:clause.version,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:clause.version,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:clause.version,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:clause.version,end_date:"
-msgid "End Date"
-msgstr "Date de Fin"
-
-msgctxt "field:clause.version,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:clause.version,main_elem:"
-msgid "Descriptor"
-msgstr "Descripteur"
-
-msgctxt "field:clause.version,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
-msgctxt "field:clause.version,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:clause.version,start_date:"
-msgid "Start Date"
-msgstr "Date de Début"
-
-msgctxt "field:clause.version,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:clause.version,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:clause.version,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -1383,10 +1210,6 @@ msgctxt "field:ir.model,printable:"
 msgid "Printable"
 msgstr "Imprimable"
 
-msgctxt "field:offered,clause_rules:"
-msgid "Clause Rules"
-msgstr "Clauses"
-
 msgctxt "field:offered,code:"
 msgid "Code"
 msgstr "Code"
@@ -1800,7 +1623,7 @@ msgid "Sub Elem Rule Engine"
 msgstr "Moteur de Règle"
 
 msgctxt "field:offered.eligibility.rule,sub_elem_rule_extra_data:"
-msgid "Rule Extra Data"
+msgid "Rule Parameters"
 msgstr "Paramètres de Rêgle"
 
 msgctxt "field:offered.eligibility.rule,subscriber_classes:"
@@ -1882,6 +1705,10 @@ msgstr "Identifiant XML"
 msgctxt "field:offered.item.description,code:"
 msgid "Code"
 msgstr "Code"
+
+msgctxt "field:offered.item.description,coverages:"
+msgid "Coverages"
+msgstr "Garanties"
 
 msgctxt "field:offered.item.description,create_date:"
 msgid "Create Date"
@@ -2015,10 +1842,6 @@ msgctxt "field:offered.item.description-sub_item.description,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:offered.option.description,clause_rules:"
-msgid "Clause Rules"
-msgstr "Clauses"
-
 msgctxt "field:offered.option.description,code:"
 msgid "Code"
 msgstr "Code"
@@ -2090,6 +1913,10 @@ msgstr "Assureur"
 msgctxt "field:offered.option.description,is_package:"
 msgid "Package"
 msgstr "Formule"
+
+msgctxt "field:offered.option.description,is_service:"
+msgid "Is a Service"
+msgstr "Est un service"
 
 msgctxt "field:offered.option.description,item_desc:"
 msgid "Item Description"
@@ -2203,10 +2030,6 @@ msgctxt "field:offered.product,change_coverages_order:"
 msgid "Change Order"
 msgstr "Modifier l'Ordre"
 
-msgctxt "field:offered.product,clause_rules:"
-msgid "Clause Rules"
-msgstr "Clauses"
-
 msgctxt "field:offered.product,code:"
 msgid "Code"
 msgstr "Code"
@@ -2270,10 +2093,6 @@ msgstr "Descriptions des Risques"
 msgctxt "field:offered.product,name:"
 msgid "Name"
 msgstr "Nom"
-
-msgctxt "field:offered.product,possible_item_descs:"
-msgid "Possible Item Descriptions"
-msgstr "Descripteurs de Bien Possibles"
 
 msgctxt "field:offered.product,premium_rules:"
 msgid "Premium Rules"
@@ -2346,46 +2165,6 @@ msgstr "Date de mise à jour"
 msgctxt "field:offered.product-extra_data,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
-
-msgctxt "field:offered.product-item.description,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:offered.product-item.description,create_date_:"
-msgid "Creation date"
-msgstr "Creation date"
-
-msgctxt "field:offered.product-item.description,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:offered.product-item.description,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:offered.product-item.description,item_desc:"
-msgid "Item Description"
-msgstr "Description du Risque"
-
-msgctxt "field:offered.product-item.description,product:"
-msgid "Product"
-msgstr "Produit"
-
-msgctxt "field:offered.product-item.description,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:offered.product-item.description,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:offered.product-item.description,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:offered.product-item.description,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "field:offered.product-option.description,coverage:"
 msgid "Option Description"
@@ -2567,29 +2346,9 @@ msgctxt "field:process-offered.product,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:rule_engine,extra_data_parameters:"
-msgid "Extra Data Parameters"
-msgstr "Données complémentaires"
-
-msgctxt "field:rule_engine,rule_external_extra_datas:"
+msgctxt "field:rule_engine,extra_data_used:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
-
-msgctxt "field:rule_engine,rule_extra_datas:"
-msgid "Rule Parameter"
-msgstr "Paramètre de Règle"
-
-msgctxt "field:rule_engine.parameter,external_extra_data_def:"
-msgid "External Extra Data"
-msgstr "Donnée Complémentaire Externe"
-
-msgctxt "field:rule_engine.parameter,extra_data_def:"
-msgid "Extra Parameters"
-msgstr "Paramètres Complémentaires"
-
-msgctxt "field:rule_engine.parameter,rule_extra_data:"
-msgid "Rule Extra Data"
-msgstr "Paramètres de Rêgle"
 
 msgctxt "field:rule_engine-extra_data,create_date:"
 msgid "Create Date"
@@ -2631,6 +2390,10 @@ msgctxt "field:rule_engine-extra_data,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:billing.premium.rule,match_contract_frequency:"
+msgid "Should the premium be stored at the contract's frequency ?"
+msgstr "La prime doit-elle être stockée à la fréquence du contrat?"
+
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
@@ -2650,18 +2413,6 @@ msgstr "Composante de Cotisation"
 msgctxt "model:clause,name:"
 msgid "Clause"
 msgstr "Clause"
-
-msgctxt "model:clause.rule,name:"
-msgid "Clause Rule"
-msgstr "Clause"
-
-msgctxt "model:clause.rule-clause,name:"
-msgid "Rule Clause Relation"
-msgstr "Table intermédiaire entre l'offre et le clause"
-
-msgctxt "model:clause.version,name:"
-msgid "Clause Version"
-msgstr "Version de Clause"
 
 msgctxt "model:document.create.attach,name:"
 msgid "Document Create Attach"
@@ -2851,11 +2602,6 @@ msgctxt "model:offered.eligibility.rule,name:"
 msgid "Eligibility Rule"
 msgstr "Eligibilite"
 
-msgctxt "model:offered.eligibility.rule-relation.kind,name:"
-msgid "Eligibilty Rule to Relation Kind Relation"
-msgstr ""
-"Table intermédiaire entre la règle d'égibilité et les relations autorisées"
-
 msgctxt "model:offered.exclusion,name:"
 msgid "Exclusion Kind"
 msgstr "Type d'exclusion"
@@ -2891,10 +2637,6 @@ msgstr "Produit"
 msgctxt "model:offered.product-extra_data,name:"
 msgid "Relation between Product and Extra Data"
 msgstr "Relation Produit-Données Complémantaires"
-
-msgctxt "model:offered.product-item.description,name:"
-msgid "Relation between Product and Item Description"
-msgstr "Relation Produit-Risque"
 
 msgctxt "model:offered.product-option.description,name:"
 msgid "Product to Option Description Relation"
@@ -2933,8 +2675,12 @@ msgid "Monthly"
 msgstr "Mensuel"
 
 msgctxt "selection:billing.premium.rule,frequency:"
-msgid "One-Shot"
-msgstr "Entête"
+msgid "Once per Contract"
+msgstr "Une fois par contrat"
+
+msgctxt "selection:billing.premium.rule,frequency:"
+msgid "Once per Invoice"
+msgstr "Une fois par quittance"
 
 msgctxt "selection:billing.premium.rule,frequency:"
 msgid "Quarterly"
@@ -2995,34 +2741,6 @@ msgstr "Risque Couvert"
 msgctxt "selection:billing.premium.rule.component,rated_object_kind:"
 msgid "Global"
 msgstr "Global"
-
-msgctxt "selection:clause.rule,config_kind:"
-msgid "Advanced"
-msgstr "Avancé"
-
-msgctxt "selection:clause.rule,config_kind:"
-msgid "Simple"
-msgstr "Simple"
-
-msgctxt "selection:clause.rule,offered:"
-msgid "Option Description"
-msgstr "Garantie"
-
-msgctxt "selection:clause.rule,offered:"
-msgid "Product"
-msgstr "Produit"
-
-msgctxt "selection:clause.rule,template_behaviour:"
-msgid ""
-msgstr " "
-
-msgctxt "selection:clause.rule,template_behaviour:"
-msgid "Add"
-msgstr "Compléter"
-
-msgctxt "selection:clause.rule,template_behaviour:"
-msgid "Remove"
-msgstr "Remplacer"
 
 msgctxt "selection:document.receive.request,kind:"
 msgid ""
@@ -3131,10 +2849,6 @@ msgstr "Préjudice"
 msgctxt "selection:extra_data,kind:"
 msgid "Product"
 msgstr "Produit"
-
-msgctxt "selection:extra_data,kind:"
-msgid "Rule Engine"
-msgstr "Moteur de Règle"
 
 msgctxt "selection:extra_data,type_:"
 msgid "Boolean"
@@ -3417,8 +3131,8 @@ msgid "Person"
 msgstr "Personne Physique"
 
 msgctxt "selection:offered.option.description,family:"
-msgid ""
-msgstr " "
+msgid "Generic"
+msgstr "Générique"
 
 msgctxt "selection:offered.option.description,family:"
 msgid "Life"
@@ -3520,18 +3234,6 @@ msgctxt "selection:rule_engine,extra_data_kind:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
 
-msgctxt "selection:rule_engine,extra_data_kind:"
-msgid "Rule Parameter"
-msgstr "Paramètre de Règle"
-
-msgctxt "selection:rule_engine.parameter,kind:"
-msgid "External Extra Data"
-msgstr "Donnée Complémentaire Externe"
-
-msgctxt "selection:rule_engine.parameter,kind:"
-msgid "Rule Extra Data"
-msgstr "Paramètres de Rêgle"
-
 msgctxt "view:billing.premium.rule.component:"
 msgid "Premium Rule Component"
 msgstr "Composante de Cotisation"
@@ -3547,18 +3249,6 @@ msgstr "Risque Couvert"
 msgctxt "view:billing.premium.rule:"
 msgid "Pricing rule"
 msgstr "Règle de Cotisation"
-
-msgctxt "view:clause.rule:"
-msgid "Clause rule"
-msgstr "Clause"
-
-msgctxt "view:clause.version:"
-msgid "Clause Version"
-msgstr "Version de Clause"
-
-msgctxt "view:clause.version:"
-msgid "Clause rule"
-msgstr "Clause"
 
 msgctxt "view:clause:"
 msgid "Clause"
@@ -3763,14 +3453,6 @@ msgstr "Assureur"
 msgctxt "view:process:"
 msgid "Products"
 msgstr "Produits"
-
-msgctxt "view:rule_engine.parameter:"
-msgid "Rule Extra Data"
-msgstr "Paramètres de Rêgle"
-
-msgctxt "view:rule_engine.parameter:"
-msgid "Tables"
-msgstr "Tables"
 
 msgctxt "wizard_button:document.create,attach,end:"
 msgid "Cancel"
