--- a/modules/process_cog/locale/fr_FR.po
+++ b/modules/process_cog/locale/fr_FR.po
@@ -368,7 +368,7 @@ msgstr "Démarrer le processus"
 
 msgctxt "wizard_button:ProcessFinder,process_parameters,action:"
 msgid "Start Process (_k)"
-msgstr ""
+msgstr "Démarrer le processus (_k)"
 
 msgctxt "wizard_button:ProcessFinder,process_parameters,end:"
 msgid "Cancel"
